# a2akit

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  example_1.py  example_3.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  publish.yml
concepts/architecture/: index.html
concepts/task-lifecycle/: index.html
concepts/worker-model/: index.html
configuration/: index.html
docs/: configuration.md  getting-started.md  index.md
docs/concepts/: architecture.md  worker-model.md
docs/examples/: authenticated-card.md  redis-langgraph.md
docs/guides/: authenticated-card.md  debug-ui.md  deployment.md  middleware.md  push-notifications.md  streaming.md
docs/reference/: broker.md  client.md  endpoints.md  eventbus.md  server.md  storage.md  taskcontext.md
examples/: dependency_injection.py  echo.py  extensions.py  extensions_client.py  langgraph_worker.py  output_negotiation.py  streaming.py
examples/auth_apikey/: client.py  server.py
examples/auth_bearer/: client.py  server.py
examples/authenticated-card/: index.html
examples/authenticated_card/: client.py  server.py
examples/card_validator/: client.py  server.py
examples/client/: index.html
examples/dependency-injection/: index.html
examples/echo/: index.html
examples/hook-printer/: index.html
examples/langgraph-worker/: index.html
examples/middleware-secret/: index.html
examples/multi_transport/: client.py  server.py
examples/push-notifications/: index.html
examples/redis-langgraph/: index.html
examples/redis_langgraph/: Dockerfile  client.py  docker-compose.yml  requirements.txt  server.py
examples/streaming/: index.html
examples/subscribe_replay/: client.py  server.py
examples/transport_fallback/: client.py  server.py
getting-started/: index.html
guides/authenticated-card/: index.html
guides/cancellation/: index.html
guides/debug-ui/: index.html
guides/dependency-injection/: index.html
guides/deployment/: index.html
guides/hooks/: index.html
guides/langgraph/: index.html
guides/middleware/: index.html
guides/multi-turn/: index.html
guides/protocol-versions/: index.html
guides/push-notifications/: index.html
guides/streaming/: index.html
guides/troubleshooting/: index.html
reference/broker/: index.html
reference/client/: index.html
reference/endpoints/: index.html
reference/eventbus/: index.html
reference/server/: index.html
reference/storage/: index.html
reference/taskcontext/: index.html
search/: search_index.json
src/a2akit/: __init__.py  _chat_ui.py  agent_card.py  cancel.py  config.py  dependencies.py  endpoints.py  errors.py  event_emitter.py  jsonrpc.py  schema.py  server.py  task_manager.py
src/a2akit/_static/: chat.html
src/a2akit/broker/: __init__.py  base.py  memory.py  redis.py
src/a2akit/client/: base.py  result.py
src/a2akit/client/transport/: base.py  jsonrpc.py  rest.py
src/a2akit/event_bus/: __init__.py  base.py  memory.py  redis.py
src/a2akit/middleware/: __init__.py  auth.py  base.py
src/a2akit/push/: delivery.py  emitter.py  endpoints.py  validation.py
src/a2akit/storage/: __init__.py  _sql_base.py  base.py  memory.py  postgres.py  redis.py  sqlite.py
src/a2akit/telemetry/: _semantic.py
src/a2akit/worker/: __init__.py  adapter.py  base.py  context_factory.py
src/agentserve/: __init__.py  agent_card.py  endpoints.py  event_emitter.py  server.py  task_manager.py
src/agentserve/broker/: __init__.py  base.py  memory.py
src/agentserve/event_bus/: base.py  memory.py
src/agentserve/storage/: base.py  memory.py
src/agentserve/worker/: adapter.py  base.py  context_factory.py
tests/: conftest.py  test_accepts.py  test_accepts_integration.py  test_agent_card.py  test_agent_card_build.py  test_artifacts.py  test_auth_middleware.py  test_auth_required.py  test_authenticated_card.py  test_broker.py  test_cancel.py  test_cancel_registry.py  test_cancel_storage.py  test_capabilities_config.py  test_capabilities_server.py  test_card_validator.py  test_client_integration.py  test_client_jsonrpc_coverage.py  test_client_retry.py  test_config.py  test_content_type_validation.py  test_context.py  test_dependencies.py  test_direct_reply.py  test_echo.py  test_endpoints_coverage.py  test_error_handling.py  test_event_bus.py  test_extensions.py  test_feature_completeness.py  test_health.py  test_hooks_integration.py  test_idempotency.py  test_input_required.py  test_jsonrpc.py  test_multi_transport.py  test_push_delivery.py  test_push_endpoints.py  test_push_endpoints_jsonrpc.py  test_redis_broker.py  (+15 more)
ui/scripts/: embed.mjs
ui/src/: index.css
ui/src/components/: AgentInfo.tsx  ChatView.tsx  TasksView.tsx
ui/src/lib/: protocol.ts  types.ts
