[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a2akit"
version = "0.0.14"
description = "A2A agent framework in one import."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Markus Lang" },
]
keywords = ["a2a", "agent", "agent-to-agent", "framework", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "a2a-sdk>=0.3,<1",
    "uvicorn[standard]>=0.29",
    "anyio>=4.4",
    "pydantic>=2.7",
    "pydantic-settings>=2.13.1",
    "fastapi>=0.135.1",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.2.0"]
postgres = ["sqlalchemy[asyncio]>=2.0", "asyncpg>=0.29"]
sqlite = ["sqlalchemy[asyncio]>=2.0", "aiosqlite>=0.20"]
sql = ["sqlalchemy[asyncio]>=2.0"]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/markuslang1987/a2akit"
Documentation = "https://markuslang1987.github.io/a2akit/"
Repository = "https://github.com/markuslang1987/a2akit"
Changelog = "https://github.com/markuslang1987/a2akit/blob/main/CHANGELOG.md"
Issues = "https://github.com/markuslang1987/a2akit/issues"

[dependency-groups]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "pymdown-extensions>=10.7",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.8",
    "asgi-lifespan>=2.1.0",
    "pre-commit>=4.0",
    "mypy>=1.14",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/a2akit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
    "--cov=a2akit",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
markers = [
    "slow: Tests that take >2s",
]

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F", "E", "W", "I", "N", "UP", "B", "A", "C4",
    "SIM", "TCH", "RUF", "PT", "ASYNC", "T20", "PIE",
    "RSE", "RET", "TID",
]
ignore = ["E501", "RET504", "SIM108"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20", "PT012"]
"examples/**" = ["T20", "TCH"]
"src/a2akit/endpoints.py" = ["TCH003"]

[tool.ruff.lint.isort]
known-first-party = ["a2akit"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["a2a_sdk.*", "uvicorn.*", "pytest.*", "asgi_lifespan.*", "httpx.*", "langgraph.*", "asyncpg.*", "aiosqlite.*", "sqlalchemy.*", "opentelemetry.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*", "conftest"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["examples.*"]
disallow_untyped_defs = false
ignore_missing_imports = true